--- a/src/app/comun/interfaz/interfaz.component.html
+++ b/src/app/comun/interfaz/interfaz.component.html
@@ -115,7 +115,7 @@
                 [hechizos]="this.interfazService.hechizos"
                 [buff]="this.interfazService.buff"
                 [idHechizoSeleccionado]="this.interfazService.idHechizoSeleccionado"
-                [renderHeroe]="this.interfazService.renderHeroeHechizo">
+                [estadisticas]="this.interfazService.renderHeroeHechizo.estadisticas">
             </detalleHechizoComponent>
             <div class="innerShadow"></div>
         </div>
