--- a/src/app/comun/configuracion/configuracion.component.sass
+++ b/src/app/comun/configuracion/configuracion.component.sass
@@ -9,15 +9,13 @@
   justify-content: center
   align-items: center
 
+
   .mat-dialog-container
-    position: absolute !important
-    width: 50%
-    height: 20%
-    min-width: 70vw
-    min-height: 80vh
+    position: relative 
+    width: fit-content
+    height: fit-content 
     color: $colorTexto
     padding: 0
-    overflow: initial
 
   .contenedor
     position: absolute
@@ -25,19 +23,6 @@
     height: 100%
     color: $colorTexto
     background-color: $colorFondo2
-
-    .frame
-        position: absolute
-        top: 0
-        left: 0
-        padding-top: 5%
-        margin-top: -2.5%
-        padding-left: 3%
-        margin-left: -1.5%
-        width: 100%
-        height: 100%
-        background-image: url("../../../assets/Frames/Frame-Dialogo.png")
-        background-size: 100% 100%
 
     .title
         margin-top: 20px
@@ -105,4 +90,27 @@
             width: 20%
             margin: 0 15%
 
+  #contenedorInicial
+    position: relative
+    color: $colorTexto
+    background-color: $colorFondo2
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    padding: 20px
+
+    .title
+      position: relative
+      color: white
+      text-align: center
+
+    .opcion
+      position: relative
+      height: 3em 
+      aspect-ratio: 4
+      margin: 0.5em 0
+
+
+  
 
