--- a/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
+++ b/src/app/comun/mapa-mazmorra/mapa-mazmorra.component.sass
@@ -6,7 +6,7 @@
   position: absolute
   width: 100%
   height: 100%
-  //mix-blend-mode: none
+  mix-blend-mode: none
 
 #contenedorMapaMazmorra
   .contenedorIsometrico
