Compilación para despliegue Movil Test Puente Octubre

--- a/src/app/comun/inmap/inmap.component.html
+++ b/src/app/comun/inmap/inmap.component.html
@@ -99,7 +99,7 @@
         <mapaGeneralComponent id="mapaGeneralComponent"
                               (comandoMapaGeneral)="comandoPanelGeneral($event)"
                               [coordenadas]="sesion.render.inmap"
-                              [radioRenderIsometrico]="appService.radioRenderIsometrico"
+                              [radioRenderIsometrico]="6"
                               [herramientaInMap]="'InMap'"
                               [esTurnoPropio]="inmapService.checkTurnoPropio()"
                               [mostrarNiebla]="true">
