Correcciones Visuales IOS

--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -248,8 +248,9 @@ $highlightObjetivoColor: red
     height: 120%
     top: -10%
     left: -10%
+    width: 110%
     border-radius: 0
-    aspect-ratio: 1
+    //aspect-ratio: 1
     pointer-events: none
     z-index: 3
     overflow: hidden
