--- a/src/app/comun/index/index.component.sass
+++ b/src/app/comun/index/index.component.sass
@@ -101,7 +101,7 @@
 
   .wrapperInterior
     display: flex
-    height: 75%
+    //height: 75%
     flex-direction: column
     justify-content: space-evenly
     @media screen and (min-aspect-ratio: 10/3)
