--- a/src/app/comun/panel-ubicacion/panel-ubicacion.component.sass
+++ b/src/app/comun/panel-ubicacion/panel-ubicacion.component.sass
@@ -64,7 +64,7 @@
       .imagenUbicacion
         position: relative
         height: 70%
-        width: fit-content
+        //width: fit-content
       .textoUbicacion
         text-align: center
         font-size: 20px
