--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -20,8 +20,8 @@
 
   .contenedor
     position: relative
-    width: 100%
-    height: 100%
+    width: fit-content
+    height: fit-content
     color: black
     background-color: $colorFondo2
 
