--- a/src/app/comun/heroe/heroe.component.sass
+++ b/src/app/comun/heroe/heroe.component.sass
@@ -23,6 +23,8 @@
         height: 100%
         background-color: $colorFondo1
         border-radius: 100%
+        aspect-ratio: 1
+        margin: auto
         z-index: 2
         img
             position: relative
