--- a/src/app/comun/mapa-general/mapaGeneral.component.sass
+++ b/src/app/comun/mapa-general/mapaGeneral.component.sass
@@ -20,15 +20,20 @@
   position: absolute
   height: 100%
   width: 100%
-  background-image: url(../../../assets/mapa/nubes.jpg)
-  animation: movimientoBackground 50s infinite 
+  img
+    position: absolute
+    width: 150%
+    height: 100%
+    right: 0
+    animation: movimientoNubes 50s infinite
+
 
 #contenedorMapa
   mask: url(../../../assets/mascaras/transicion_horizontal.png)
   transition: mask-position steps(17) 1s
   mask-size: 100% 1800%
   mask-position: 0% 100%
-  
+
   &.mostrarNubes
     -webkit-mask: url(../../../assets/mascaras/transicion_horizontal.png)
     mask-size: 100% 1800%
@@ -48,7 +53,7 @@
     position: absolute
     top: 50%
     left: 50%
-    margin-left: -3.5px 
+    margin-left: -3.5px
     margin-top: -3.5px
     width: 5px
     height: 5px
@@ -85,9 +90,9 @@
     //mask-image: url("../../../assets/InMap/mascara.png")
 
   .contenedorMascara
-    position: absolute 
-    width: auto 
-    height: auto 
+    position: absolute
+    width: auto
+    height: auto
     display: flex
 
     .mapaMundo
@@ -95,7 +100,7 @@
       //top:50%
       //left: 50%
       max-width: 80vw
-      max-height: 90vh 
+      max-height: 90vh
       //max-width: 100%
       //transform: scale(0.8)
 
@@ -120,10 +125,10 @@
     .marcador
       position: absolute
       width: 2%
-      
+
     .zona1
-      top: 87%  
-      left: 85.5% 
+      top: 87%
+      left: 85.5%
 
   .contenedorMapaIsometrico
     position: absolute
@@ -132,10 +137,10 @@
     justify-content: center
     width: 100%
     height: 100%
-    top: 0 
+    top: 0
     left: 0
-    
-  .wrapper 
+
+  .wrapper
       display: flex
       position: relative
       width: 1700px
@@ -155,17 +160,20 @@
       //left: 2936px
 
   .row
-    position: absolute
+    position: relative
     width: 650px //Radio de 6 Casillas
-    height: 650px //Radio de 6 Casillas
+    //height: 650px //Radio de 6 Casillas
     white-space: nowrap
     pointer-events: none
-    transition: all 1s
+    //transition: all 1s ease
     //height: 0px
     animation-delay: 0s
-    //animation: rowInsert 1s forwards
+    &.animacionAddRow
+      animation: rowInsert 1s ease
+    &.animacionDeleteRow
+      animation: rowDelete 1s forwards ease
 
-  .floor 
+  .floor
     position: absolute
     width: 650px //Radio de 6 Casillas
     height: 650px //Radio de 6 Casillas
@@ -176,12 +184,11 @@
     transition: all 1s
     font-size: 0
 
-
-  .floor .tile 
-      position: absolute
+  .floor .tile
+      position: relative
       font-size: 11pt
       color: #ccc
-      //display: inline-block
+      display: inline-block
       //background: #111
       width: 48px
       height: 48px
@@ -192,13 +199,18 @@
       text-align: center
       vertical-align: top
       pointer-events: all
-      transition: all 0.5s linear
+      //transition: all 0.5s linear
+      animation-delay: 0s
+      &.animacionAddColumn
+        animation: columnInsert 1s ease
+      &.animacionDeleteColumn
+        animation: columnDelete 1s forwards ease
 
       .marcador
         position: absolute
         top: -2px
         left: -2px
-        width: 50px 
+        width: 50px
         height:  50px
         z-index: 2
         border: 2px solid red
@@ -211,7 +223,7 @@
           border: 2px solid yellow
         &.noDisplay
           display: none
-        
+
       .imagenTile
         position: absolute
         bottom: 0
@@ -228,13 +240,14 @@
         top: -40px
         left: -37px
         width: 48px
-        -webkit-transform: rotateZ(-45deg) rotateX(0deg) rotateY(-55deg)
+        -webkit-transform-style: preserve-3d
+        transform: rotateZ(-45deg) rotateX(0deg) rotateY(0deg) !important
         pointer-events: none
-        animation: pulsoMarcador 1s infinite
+        //animation: pulsoMarcador 1s infinite
 
   .floor .player
       position: absolute
-      z-index: 1
+      z-index: 100
       width: 50px
       height: 50px
       transform-style: preserve-3d
@@ -244,6 +257,12 @@
       -o-transition: all 250ms
       transition: all 250ms
       opacity: 1
+      animacionFocusComponent
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
       .flecha
         position: absolute
         height: 50px
@@ -282,25 +301,25 @@
   filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2)
   pointer-events: none
 
-#foglayer_01, #foglayer_02, #foglayer_03 
+#foglayer_01, #foglayer_02, #foglayer_03
   height: 100%
   position: absolute
   width: 200%
 
 #foglayer_01 .image01, #foglayer_01 .image02,
 #foglayer_02 .image01, #foglayer_02 .image02,
-#foglayer_03 .image01, #foglayer_03 .image02 
+#foglayer_03 .image01, #foglayer_03 .image02
   float: left
   height: 100%
   width: 50%
 
-#foglayer_01 
+#foglayer_01
   //-webkit-animation: foglayer_01_opacity 100s linear infinite, foglayer_moveme 100s linear infinite
   //-moz-animation: foglayer_01_opacity 100s linear infinite, foglayer_moveme 100s linear infinite
   //animation: foglayer_01_opacity 100s linear infinite, foglayer_moveme 100s linear infinite
   animation: foglayer_moveme 100s linear infinite
 
-#foglayer_02, #foglayer_03 
+#foglayer_02, #foglayer_03
   //-webkit-animation: foglayer_02_opacity 210s linear infinite, foglayer_moveme 100s linear infinite
   //-moz-animation: foglayer_02_opacity 210s linear infinite, foglayer_moveme 100s linear infinite
   //animation: foglayer_02_opacity 210s linear infinite, foglayer_moveme 100s linear infinite
@@ -312,9 +331,9 @@
   'size: cover' || 'size: 100%' results remain the same
   'attachment: scroll' can be added or removed results remain the same
   'attachment: fixed' causing unexpected results in Chrome
-  'repeat-x' || 'no-repeat' results remain the same */ 
+  'repeat-x' || 'no-repeat' results remain the same */
 
-#foglayer_01 .image01, #foglayer_01 .image02 
+#foglayer_01 .image01, #foglayer_01 .image02
   background: url("https://raw.githubusercontent.com/danielstuart14/CSS_FOG_ANIMATION/master/fog1.png") center center/cover no-repeat transparent
 
 #foglayer_02 .image01, #foglayer_02 .image02,
@@ -322,198 +341,215 @@
   background: url("https://raw.githubusercontent.com/danielstuart14/CSS_FOG_ANIMATION/master/fog2.png") center center/cover no-repeat transparent
 
 /* ---------- Keyframe Layer 1 ---------- */
-@-webkit-keyframes foglayer_01_opacity 
-  0%  
-    opacity: .1 
-  22%  
-    opacity: .5 
-  40%  
-    opacity: .28 
-  58%  
-    opacity: .4 
-  80%  
-    opacity: .16 
-  100%  
-    opacity: .1 
+@-webkit-keyframes foglayer_01_opacity
+  0%
+    opacity: .1
+  22%
+    opacity: .5
+  40%
+    opacity: .28
+  58%
+    opacity: .4
+  80%
+    opacity: .16
+  100%
+    opacity: .1
 
-@-moz-keyframes foglayer_01_opacity 
-  0%  
-    opacity: .1 
-  22%  
-    opacity: .5 
-  40%  
-    opacity: .28 
-  58%  
-    opacity: .4 
-  80%  
-    opacity: .16 
-  100%  
-    opacity: .1 
+@-moz-keyframes foglayer_01_opacity
+  0%
+    opacity: .1
+  22%
+    opacity: .5
+  40%
+    opacity: .28
+  58%
+    opacity: .4
+  80%
+    opacity: .16
+  100%
+    opacity: .1
 
-@-o-keyframes foglayer_01_opacity 
-  0%  
-    opacity: .1 
-  22%  
-    opacity: .5 
-  40%  
-    opacity: .28 
-  58%  
-    opacity: .4 
-  80%  
-    opacity: .16 
-  100%  
-    opacity: .1 
+@-o-keyframes foglayer_01_opacity
+  0%
+    opacity: .1
+  22%
+    opacity: .5
+  40%
+    opacity: .28
+  58%
+    opacity: .4
+  80%
+    opacity: .16
+  100%
+    opacity: .1
 
-@keyframes foglayer_01_opacity 
-  0%  
-    opacity: .1 
-  22%  
-    opacity: .5 
-  40%  
-    opacity: .28 
-  58%  
-    opacity: .4 
-  80%  
-    opacity: .16 
-  100%  
-    opacity: .1 
+@keyframes foglayer_01_opacity
+  0%
+    opacity: .1
+  22%
+    opacity: .5
+  40%
+    opacity: .28
+  58%
+    opacity: .4
+  80%
+    opacity: .16
+  100%
+    opacity: .1
 
 /* ---------- Keyframe Layer 2 ---------- */
-@-webkit-keyframes foglayer_02_opacity 
-  0%  
-    opacity: .5 
-  25%  
-    opacity: .2 
-  50%  
-    opacity: .1 
-  80%  
-    opacity: .3 
-  100%  
-    opacity: .5 
+@-webkit-keyframes foglayer_02_opacity
+  0%
+    opacity: .5
+  25%
+    opacity: .2
+  50%
+    opacity: .1
+  80%
+    opacity: .3
+  100%
+    opacity: .5
 
-@-moz-keyframes foglayer_02_opacity 
-  0%  
-    opacity: .5 
-  25%  
-    opacity: .2 
-  50%  
-    opacity: .1 
-  80%  
-    opacity: .3 
-  100%  
-    opacity: .5 
+@-moz-keyframes foglayer_02_opacity
+  0%
+    opacity: .5
+  25%
+    opacity: .2
+  50%
+    opacity: .1
+  80%
+    opacity: .3
+  100%
+    opacity: .5
 
-@-o-keyframes foglayer_02_opacity 
-  0%  
-    opacity: .5 
-  25%  
-    opacity: .2 
-  50%  
-    opacity: .1 
-  80%  
-    opacity: .3 
-  100%  
-    opacity: .5 
+@-o-keyframes foglayer_02_opacity
+  0%
+    opacity: .5
+  25%
+    opacity: .2
+  50%
+    opacity: .1
+  80%
+    opacity: .3
+  100%
+    opacity: .5
 
-@keyframes foglayer_02_opacity 
-  0%  
-    opacity: .5 
-  25%  
-    opacity: .2 
-  50%  
-    opacity: .1 
-  80%  
-    opacity: .3 
-  100%  
-    opacity: .5 
+@keyframes foglayer_02_opacity
+  0%
+    opacity: .5
+  25%
+    opacity: .2
+  50%
+    opacity: .1
+  80%
+    opacity: .3
+  100%
+    opacity: .5
 
 /* ---------- Keyframe Layer 3 ---------- */
 
-@-webkit-keyframes foglayer_03_opacity 
-  0%  
-    opacity: .8 
-  27%  
-    opacity: .2 
-  52%  
-    opacity: .6 
-  68%  
-    opacity: .3 
-  100%  
-    opacity: .8 
+@-webkit-keyframes foglayer_03_opacity
+  0%
+    opacity: .8
+  27%
+    opacity: .2
+  52%
+    opacity: .6
+  68%
+    opacity: .3
+  100%
+    opacity: .8
 
-@-moz-keyframes foglayer_03_opacity 
-  0%  
-    opacity: .8 
-  27%  
-    opacity: .2 
-  52%  
-    opacity: .6 
-  68%  
-    opacity: .3 
-  100%  
-    opacity: .8 
+@-moz-keyframes foglayer_03_opacity
+  0%
+    opacity: .8
+  27%
+    opacity: .2
+  52%
+    opacity: .6
+  68%
+    opacity: .3
+  100%
+    opacity: .8
 
-@-o-keyframes foglayer_03_opacity 
-  0%  
-    opacity: .8 
-  27%  
-    opacity: .2 
-  52%  
-    opacity: .6 
-  68%  
-    opacity: .3 
-  100%  
-    opacity: .8 
+@-o-keyframes foglayer_03_opacity
+  0%
+    opacity: .8
+  27%
+    opacity: .2
+  52%
+    opacity: .6
+  68%
+    opacity: .3
+  100%
+    opacity: .8
 
-@keyframes foglayer_03_opacity 
-  0%  
-    opacity: .8 
-  27%  
-    opacity: .2 
-  52%  
-    opacity: .6 
-  68%  
-    opacity: .3 
-  100%  
-    opacity: .8 
- 
+@keyframes foglayer_03_opacity
+  0%
+    opacity: .8
+  27%
+    opacity: .2
+  52%
+    opacity: .6
+  68%
+    opacity: .3
+  100%
+    opacity: .8
 
 @keyframes rowInsert
   0%
-    height: 0px
-  100%  
-    height: 50px 
+    transform: translateY(0px)
+  100%
+    transform: translateY(50px)
+
+@keyframes rowDelete
+  0%
+    transform: translateY(0px)
+  100%
+    transform: translateY(-50px)
+
+@keyframes columnInsert
+  0%
+    transform: translateX(0px)
+  100%
+    transform: translateX(-50px)
+
+@keyframes columnDelete
+  0%
+    transform: translateX(0px)
+  100%
+    transform: translateX(50px)
 
 /* ---------- Keyframe moveMe ---------- */
-@-webkit-keyframes foglayer_moveme 
-  0%  
-    left: 0 
-  100%  
-    left: -100% 
+@-webkit-keyframes foglayer_moveme
+  0%
+    left: 0
+  100%
+    left: -100%
 
-@-moz-keyframes foglayer_moveme 
-  0%  
-    left: 0 
-  100%  
-    left: -100% 
+@-moz-keyframes foglayer_moveme
+  0%
+    left: 0
+  100%
+    left: -100%
 
-@-o-keyframes foglayer_moveme 
-  0%  
-    left: 0 
-  100%  
-    left: -100% 
+@-o-keyframes foglayer_moveme
+  0%
+    left: 0
+  100%
+    left: -100%
 
-@keyframes foglayer_moveme 
-  0%  
-    left: 0 
-  100%  
-    left: -100% 
+@keyframes foglayer_moveme
+  0%
+    left: 0
+  100%
+    left: -100%
 
 
-@media only screen and (min-width: 280px) and (max-width: 767px) 
+@media only screen and (min-width: 280px) and (max-width: 767px)
     #foglayer_01 .image01, #foglayer_01 .image02,
     #foglayer_02 .image01, #foglayer_02 .image02,
-    #foglayer_03 .image01, #foglayer_03 .image02 
+    #foglayer_03 .image01, #foglayer_03 .image02
       width: 100%
 
 @keyframes flechaMovimiento
@@ -528,17 +564,17 @@
   50%
     transform: scale3d(1.05, 1.05, 1.05) rotateZ(-45deg) rotateX(0deg) rotateY(-55deg)
 
-@keyframes movimientoBackground 
+@keyframes movimientoNubes
   0%, 100%
-    background-position: 0%
+    transform: translate(0)
   50%
-    background-position: 50%
+    transform: translate(40vw)
 
 @keyframes mask-play
   from
     mask-position: 100% 0%
   to
-    mask-position: 0% 100% 
- 
+    mask-position: 0% 100%
+
 
 
