--- a/src/app/comun/animacion-focus/animacion-focus.component.sass
+++ b/src/app/comun/animacion-focus/animacion-focus.component.sass
@@ -31,7 +31,7 @@ $path-width: 5px
   height: 100%
   overflow: hidden
   clip-path: polygon(0% 0%, 0% 100%, 10% 100%, 10% 10%, 90% 10%, 90% 90%, 10% 90%, 10% 100%, 100% 100%, 100% 0%)
-  
+
 .aspas
   position: relative
   width: 100%
@@ -48,7 +48,7 @@ $path-width: 5px
     &:after
       display: block
       content: ""
-      width: 100% 
+      width: 100%
       height: 100%
       position: absolute
       left: 100%
@@ -61,11 +61,13 @@ $path-width: 5px
     &:last-child
       background: none
       &:after
-        background: radial-gradient(circle, white, transparent) 
+        background: radial-gradient(circle, white, transparent)
 
 @keyframes o-rotate-360
-  0% 
+  0%
     transform: rotate(0)
+    -webkit-transform: rotate(0)
   100%
     transform: rotate(360deg)
+    -webkit-transform: rotate(360deg)
 
