--- a/src/app/comun/panel-equipo/panel-equipo.component.sass
+++ b/src/app/comun/panel-equipo/panel-equipo.component.sass
@@ -13,7 +13,7 @@
 
 .cdk-drag-placeholder
     position: relative
-    height: 50%
+    width: 20%
     aspect-ratio: 1
     border: solid
     box-sizing: border-box
@@ -23,8 +23,8 @@
 .cdk-drag-animating
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1)
 
-.listaInventario.cdk-drop-list-dragging 
-    .contenedorImagen:not(.cdk-drag-placeholder) 
+.listaInventario.cdk-drop-list-dragging
+    .contenedorImagen:not(.cdk-drag-placeholder)
       transition: transform 250ms cubic-bezier(0, 0, 0.2, 1)
 
 
@@ -38,7 +38,7 @@
         left: 12%
         border: 1px solid
         background-color: #231c1c
-        background-size: 100% 100% 
+        background-size: 100% 100%
         box-sizing: border-box
         border-radius: 5px
         -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
@@ -49,14 +49,14 @@
         position: absolute
         width: 11.1%
         height: 18%
-        left: 1% 
+        left: 1%
         top: 21%
         border-top: 1px solid
         border-left: 1px solid
         border-bottom: 1px solid
-        background-size: 100% 100% 
+        background-size: 100% 100%
         background-color: #231c1c
-        background-size: 100% 100% 
+        background-size: 100% 100%
         box-sizing: border-box
         border-radius: 5px 0px 0px 5px
         -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
@@ -74,7 +74,7 @@
             height: 100%
             border: 1px solid burlywood
             background-color: #1e1c21
-            background-size: 100% 100% 
+            background-size: 100% 100%
             box-sizing: border-box
             border-radius: 5px
             -webkit-box-shadow: -10px 0px 10px -5px rgba(0,0,0,0.75)
@@ -85,7 +85,7 @@
             position: relative
             width: 100%
             text-align: center
-            margin: 10px 0px 
+            margin: 10px 0px
 
         .containerEstadisticas
             position: relative
@@ -126,7 +126,7 @@
           display: flex
           align-items: center
           justify-content: center
-          height: 30%
+          //height: 30%
           aspect-ratio: 2.5
           margin: 10px 10%
           border: 3px solid $colorTexto
@@ -142,13 +142,13 @@
             .celda
               position: relative
               display: inline-block
-              height: 50%
+              width: 20%
               aspect-ratio: 1
               box-sizing: border-box
               pointer-events: none
               border: solid $colorTexto 1px
-              
-          #listaInventario    
+
+          #listaInventario
             position: absolute
             width: 100%
             height: 100%
@@ -159,13 +159,12 @@
             .contenedorImagen
               position: relative
               display: inline-block
-              height: 50%
+              width: 20%
               aspect-ratio: 1
               .imagen
                 position: absolute
                 height: 100%
                 aspect-ratio: 1
-
 
     #contenedorExterno
         position: absolute
@@ -194,20 +193,20 @@
             .heroe
               grid-area: 1 / 2 / 4 / 4
             .pantalones
-              grid-area: 1 / 4 / 2 / 5 
+              grid-area: 1 / 4 / 2 / 5
             .botas
-              grid-area: 2 / 4 / 3 / 5 
-            .casco 
-              grid-area: 1 / 1 / 2 / 2 
+              grid-area: 2 / 4 / 3 / 5
+            .casco
+              grid-area: 1 / 1 / 2 / 2
             .pechera
-              grid-area: 2 / 1 / 3 / 2 
+              grid-area: 2 / 1 / 3 / 2
 
             .arma1
-              grid-area: 3 / 1 / 4 / 2 
+              grid-area: 3 / 1 / 4 / 2
             .arma2
-              grid-area: 3 / 4 / 4 / 5 
+              grid-area: 3 / 4 / 4 / 5
 
-            img 
+            img
                 position: absolute
                 width: 50%
                 left: 17%
@@ -257,7 +256,7 @@
                     left: 0
 
             .frameItem
-                position: absolute 
+                position: absolute
                 width: 100%
                 height: 100%
                 top: 0
@@ -274,7 +273,7 @@
         #contenedorInventario
             position: absolute
             width: 90%
-            height: 40% 
+            height: 40%
             left: 50%
             margin-left: -45%
             bottom: 5%
@@ -314,7 +313,7 @@
                         width: 16.6%
                         padding-top: 16.6%
                         height: 0
-                        border: 2px solid $colorTexto 
+                        border: 2px solid $colorTexto
                         box-sizing: border-box
                         float: left
                         .objeto
@@ -323,9 +322,9 @@
                             height: 100%
                             top: 0
                             left: 0
-                    
 
-            
+
+
 
 
 
